Fix keep alive sessions